--- a/cart.html
+++ b/cart.html
@@ -27,31 +27,50 @@
             <div class="cost">
                 <p>Total cost: </p>
             </div>
-            <div class="pay_now"><button>Pay now</button></div>
+            <div class="pay_now">
+                <button>Pay now</button>
+            </div>
         </div>
     </div>
 
     <div class="bottom_cart_page">
-        <h3 class="Heading">Shopping Cart</h3>
-        <h5 class="Action">Remove all</h5>
+        <div class="cart">
+            <div class="header_wrapper">
+                <div class="title">
+                    <p>Your Shopping Cart</p> 
+                </div>
+                <div class="remove_all">
+                    <a href="">Remove all</a>
+                </div>
+            </div>
 
-        <div class="cart_item">
-            <div class="game_image">
-                <img src="Minecraft.jpg" alt="Minecraft">
-            </div>
-            <div class="about">
-                <h1>Minecraft</h1>
-                <div class="counter">
-                    <button type="button">+</button>
-                    <div class="count"></div>
-                    <button type="button">-</button>
+            <div class="cart_item">
+
+                <div class="game_image">
+                    <img src="images/Minecraft.jpg" alt="Minecraft">
                 </div>
-                <div class="price">
-                    <div class="amount"></div>
-                    <div class="remove"></div>
+
+                <div class="details">         
+                    <div class="about">
+                        <h3>Minecraft</h3>
+                    <div>
+                    
+                    <div class="counter">
+                        <button>+</button>
+                        <p>1</p>
+                        <button>-</button>
+                    </div>
+                    <div class="price">
+                        <h3>$35.00</h3>
+                    </div>
+                    <div class="remove">
+                        <a href="">Remove</a>
+                    </div>
                 </div>
             </div>
+            
         </div>
+        <!-- 
         <hr>
         <div class="checkout">
             <div class="total_cost">
@@ -61,6 +80,7 @@
                 <button class = "button">Checkout</button>
             </div>
         </div>
+        -->
     </div>
 </body>
 </html>
