--- a/products.html
+++ b/products.html
@@ -30,7 +30,7 @@
 
         <div class="product_wrapper">
             <div class="product_card">
-                <img src="Minecraft2.jpg" alt="Minecraft">
+                <img src="images/Minecraft.jpg" alt="Minecraft">
                 <h1>Minecraft</h1>
                 <p class = "price">$35.40</p>
                 <p>Create, explore, survive, repeat.</p>
