--- a/rewards.html
+++ b/rewards.html
@@ -18,8 +18,67 @@
     <div class="navigation_bar">
         <!-- Lottie animation -->
         <div class="navigation_bar_container">
-            <span>Products</span>
+            <span>Rewards</span>
         </div>  
+    </div>
+    <div class="rewards_page">
+        <div class="top_rewards_page">
+            <div class="exp_bar">
+                <div class="level">Level 0</div>
+            </div>
+            <div class="exp_needed">
+                <p>Exp needed: 100</p>
+            </div>
+        </div>
+
+        <div class="bottom_rewards_page">
+            <div class="perks">
+                <table>
+                    <tr>
+                        <td>Perk</td>
+                        <td>Perk</td>
+                        <td>Perk</td>
+                        <td>Perk</td>
+                        <td>Perk</td>
+                    </tr>
+                    <tr>
+                        <td>Perk</td>
+                        <td>Perk</td>
+                        <td>Perk</td>
+                        <td>Perk</td>
+                        <td>Perk</td>
+                    </tr>
+                    <tr>
+                        <td>Perk</td>
+                        <td>Perk</td>
+                        <td>Perk</td>
+                        <td>Perk</td>
+                        <td>Perk</td>
+                    </tr>
+                    <tr>
+                        <td>Perk</td>
+                        <td>Perk</td>
+                        <td>Perk</td>
+                        <td>Perk</td>
+                        <td>Perk</td>
+                    </tr>
+                    <tr>
+                        <td>Perk</td>
+                        <td>Perk</td>
+                        <td>Perk</td>
+                        <td>Perk</td>
+                        <td>Perk</td>
+                    </tr>
+                </table>
+            </div>
+
+            <div class="info_guide">
+                <p>
+                    Here's all the info you need for perks:
+                    BLAH BLAH BLAH
+                </p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
