Added individual js and css files for pages

--- a/index.html
+++ b/index.html
@@ -100,7 +100,40 @@
         
     </div>
 
-    <!-- Homepage Tab -->
+
+
+
+
+
+
+    <!-- Sign up/Login Tab -->
+    <div class = "back-block">
+        <div class="flex-storage">
+            <div class="flex-item">
+              <div class = "title_pos">
+                GPU
+                <section> 
+                  The GPU a specialized processor designed to accelerate graphics rendering. making them useful for machine learning, 
+                  video editing, and mostly on gaming purposes(Good grphics and such). If you want a gaming pc fit to handle the most 
+                  powerful games at high graphics, then you need a good GPU!
+                </section>
+              </div>
+
+              <div class="img_pos">
+                <img src="https://m.media-amazon.com/images/I/51KgowC05tL.__AC_SX300_SY300_QL70_ML2_.jpg"alt="image not available">
+              </div>
+
+
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+    <!-- Homepage Tabs -->
     <div class="homepage_tab">
         <div class="homepage_tab_wrapper">
 
