fixed index.css and added base login options

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Main page </title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet"
           href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
           integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc"
@@ -107,23 +107,13 @@
 
 
     <!-- Sign up/Login Tab -->
-    <div class = "back-block">
-        <div class="flex-storage">
-            <div class="flex-item">
-              <div class = "title_pos">
-                GPU
-                <section> 
-                  The GPU a specialized processor designed to accelerate graphics rendering. making them useful for machine learning, 
-                  video editing, and mostly on gaming purposes(Good grphics and such). If you want a gaming pc fit to handle the most 
-                  powerful games at high graphics, then you need a good GPU!
-                </section>
-              </div>
-
-              <div class="img_pos">
-                <img src="https://m.media-amazon.com/images/I/51KgowC05tL.__AC_SX300_SY300_QL70_ML2_.jpg"alt="image not available">
-              </div>
-
-
+    <div class="flex-storage">
+        <div class="flex-item">
+            <div class="login-button">
+                Login
+            </div>
+            <div class="signup-button">
+                Sign Up
             </div>
         </div>
     </div>
