added validation to sign up and profile page link

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
                 <div class="block-info-right">
                     <a onclick="signupForm()">Sign Up</a>
                 </div>
+
+                <div class="block-profile">
+                    <a href="profile.html">Profile</a>
+                </div>
             </div>
           </div>
     </header>
@@ -87,7 +91,7 @@
           <label for="psw"><b>Repeat Password</b></label>
           <input type="password" placeholder="Repeat Password" name="psw" required id="password-field"> 
       
-          <button type="submit" class="btn" id="submit-btn" onclick="hidesignin()">Sign Up!</button>
+          <button type="submit" class="btn" id="submit-btn" >Sign Up!</button>
           <button type="button" class="btn cancel" onclick="closesignForm()">Close</button>
         </form>
       </div>
