--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <label for="psw"><b>Password</b></label>
           <input type="password" placeholder="Enter Password" name="psw" required>
       
-          <button type="submit" class="btn">Login</button>
+          <button type="submit" class="btn" id="login-btn">Login</button>
           <button type="button" class="btn cancel" onclick="closelogForm()">Close</button>
         </form>
       </div>
