--- a/products.html
+++ b/products.html
@@ -65,7 +65,7 @@
                 <h1 class = "games">Minecraft</h1>
                 <div class = "price">$39.90</div>
                 <p>Create, explore, survive, repeat.</p>
-                <p><button>Add to Cart</button></p>
+                <button onclick="addToCart()">Add to Cart</button>
             </div>
 
             <div id="Grand Theft Auto V" class="product_card">
@@ -73,7 +73,7 @@
                 <h1 class = "games">Grand Theft Auto V</h1>
                 <div class = "price">$39.99</div>
                 <p>Where you steal cars</p>
-                <p><button>Add to Cart</button></p>
+                <button onclick="addToCart()">Add to Cart</button>
             </div>
             
             <div id="Valorant" class="product_card">
@@ -81,61 +81,70 @@
                 <h1 class = "games">Valorant</h1>
                 <div class = "price">$0.01</div>
                 <p>Shoot heads</p>
-                <p><button>Add to Cart</button></p>
+                <button onclick="addToCart()">Add to Cart</button>
             </div>
+
             <div id="Osu" class="product_card">
                 <img src="images/osu.jpg" alt="Osu">
                 <h1 class = "games">Osu</h1>
                 <div class = "price">$0.01</div>
                 <p>Click circles</p>
-                <p><button>Add to Cart</button></p>
+                <button onclick="addToCart()">Add to Cart</button>
             </div>
+
             <div id="Red Dead Redemption" class="product_card">
                 <img src="images/red dead redemption.jpg" alt="Red Dead Redemption">
                 <h1 class = "games">Red Dead Redemption</h1>
                 <div class = "price">$33.60</div>
                 <p>Idk what this game is</p>
-                <p><button>Add to Cart</button></p>
+                <button onclick="addToCart()">Add to Cart</button>
             </div>
+
             <div id="The Legend of Zelda" class="product_card">
                 <img src="images/legend of zelda.jpg" alt="The Legend of Zelda">
                 <h1 class = "games">The Legend of Zelda</h1>
                 <div class = "price">$59.90</div>
                 <p>Idk what this game is</p>
-                <p><button>Add to Cart</button></p>
+                <button onclick="addToCart()">Add to Cart</button>
             </div>
+
             <div id="Super Smash Bros" class="product_card">
                 <img src="images/super smash bros.jpg" alt="Super Smash Bros">
                 <h1 class = "games">Super Smash Bros</h1>
                 <div class = "price">$56.50</div>
                 <p>Smash your bros</p>
-                <p><button>Add to Cart</button></p>
+                <button onclick="addToCart()">Add to Cart</button>
             </div>
+
             <div id="The Last of Us" class="product_card">
                 <img src="images/the last of us.webp" alt="The Last of Us">
                 <h1 class = "games">The Last of Us</h1>
                 <div class = "price">$14.90</div>
                 <p>Repopulate the human world</p>
-                <p><button>Add to Cart</button></p>
+                <button onclick="addToCart()">Add to Cart</button>
             </div>
+
             <div id="Watch Dogs" class="product_card">
                 <img src="images/watch dogs.webp" alt="Watch Dogs">
                 <h1 class = "games">Watch Dogs</h1>
                 <div class = "price">$30.00</div>
                 <p>Watching your dogs</p>
-                <p><button>Add to Cart</button></p>
+                <button onclick="addToCart()">Add to Cart</button>
             </div>
+            
             <div id="Elden Ring" class="product_card">
                 <img src="images/elden ring.webp" alt="Elden Ring">
                 <h1 class = "games">Elden Ring</h1>
                 <div class = "price">$80.64</div>
                 <p>Ring made of elden</p>
-                <p><button>Add to Cart</button></p>
+                <button onclick="addToCart()">Add to Cart</button>
             </div>
         </div>
 
 
     </div>
+    <script src = "./app.js"></script>
     <script src = "./products.js"></script>
+    <script src = "./cart.js"></script>
 </body>
 </html>
