testing API retrieve data

--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
                 <a href="rewards.html">Browse Rewards</a>
               </div>
       
-                <div class="block-info-right">
+                <div class="block-info-right" id="loginnone">
                     <a onclick="loginForm()">Login</a>
                 </div>
 
-                <div class="block-info-right">
+                <div class="block-info-right" id="signupnone">
                     <a onclick="signupForm()">Sign Up</a>
                 </div>
 
-                <div class="block-profile">
+                <div class="block-profile" id="profile">
                     <a href="profile.html">Profile</a>
                 </div>
             </div>
