--- a/rewards.html
+++ b/rewards.html
@@ -109,6 +109,7 @@
     </div>
 
 
+
 <body>
     <div class = "back-block">
         <div class="flex-storage">
@@ -233,7 +234,7 @@
                     <h1>$100 IKEA card</h1>
                     <p>The wood, the metal, and the plastic</p>
                     <div class = "points">20 points</div>
-                    <p><button>Add to Cart</button></p>
+                    <p><button>Redeem</button></p>
                 </div>
 
                 <div id="Elden Ring" class="reward_card">
@@ -241,7 +242,7 @@
                     <h1>$200 Hotel.com card</h1>
                     <p>A hotel with more hotels</p>
                     <div class = "points">35 points</div>
-                    <p><button>Add to Cart</button></p>
+                    <p><button>Redeem</button></p>
                 </div>
 
                 <div id="Elden Ring" class="reward_card">
@@ -249,12 +250,13 @@
                     <h1>$200 Amazon card</h1>
                     <p>The biggest amazon.</p>
                     <div class = "points">35 points</div>
-                    <p><button>Add to Cart</button></p>
+                    <p><button>Redeem</button></p>
                 </div>
             </div>
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="rewards.js"></script>
 </body>
 
