--- a/ZProf_rewards.html
+++ b/ZProf_rewards.html
@@ -26,7 +26,7 @@
       
               <div class="icon-info">
                 <div>
-                    <a href="index.html">
+                    <a href="ZProf_index.html">
                         <img src="images/SG Dropship icon.png" alt="SG Dropship" width="110px" height="50px">
                     </a>
                 
