Polished product and Z product

--- a/ZProf_rewards.html
+++ b/ZProf_rewards.html
@@ -36,11 +36,11 @@
 
 
               <div class="block-info">
-                <a href="products.html">Browse Products</a>
+                <a href="Zprof_products.html">Browse Products</a>
               </div>
       
               <div class="block-info">
-                <a href="rewards.html">Browse Rewards</a>
+                <a href="ZProf_rewards.html">Browse Rewards</a>
               </div>
 
                 <div class="block-profile">
@@ -58,8 +58,7 @@
           <div class="flex-item">
             <div class = "pointinfo_pos">
                 Your points:
-                <div class="points_pos">
-                    Please Log In!
+                <div class="points_pos" id="pointscore">
                 </div>
             </div>
 
