--- a/products.html
+++ b/products.html
@@ -116,7 +116,7 @@
                 <img class = "image" src="images/Minecraft.jpg" alt="Minecraft">
                 <h1 class = "games">Minecraft</h1>
                 <div class = "price">$39.90</div>
-                <p>Create, explore, survive, repeat.</p>
+                <p>Open world game but less pixels</p>
                 <button class = "add_To_Cart">Add to Cart</button>
             </div>
 
@@ -124,7 +124,7 @@
                 <img class = "image" src="images/GTA5.png" alt="Grand Theft Auto V">
                 <h1 class = "games">Grand Theft Auto V</h1>
                 <div class = "price">$39.99</div>
-                <p>Where you steal cars</p>
+                <p>Simulation of real life with no laws</p>
                 <button class = "add_To_Cart">Add to Cart</button>
             </div>
             
@@ -132,7 +132,7 @@
                 <img class = "image" src="images/valorant.jpg" alt="Valorant">
                 <h1 class = "games">Valorant</h1>
                 <div class = "price">$6.90</div>
-                <p>Shoot heads</p>
+                <p>Lose your insanity for charge</p>
                 <button class = "add_To_Cart">Add to Cart</button>
             </div>
 
@@ -140,7 +140,7 @@
                 <img class = "image" src="images/osu.jpg" alt="Osu">
                 <h1 class = "games">Osu</h1>
                 <div class = "price">$6.90</div>
-                <p>Click circles</p>
+                <p>Click circles to get pp</p>
                 <button class = "add_To_Cart">Add to Cart</button>
             </div>
 
@@ -172,7 +172,7 @@
                 <img class = "image" src="images/the last of us.webp" alt="The Last of Us">
                 <h1 class = "games">The Last of Us</h1>
                 <div class = "price">$14.90</div>
-                <p>Repopulate the human world</p>
+                <p>Repopulate the world</p>
                 <button class = "add_To_Cart">Add to Cart</button>
             </div>
 
@@ -180,7 +180,7 @@
                 <img class = "image" src="images/watch dogs.webp" alt="Watch Dogs">
                 <h1 class = "games">Watch Dogs</h1>
                 <div class = "price">$30.00</div>
-                <p>Watching your dogs</p>
+                <p>Watch your dogs, and your neighbours</p>
                 <button class = "add_To_Cart">Add to Cart</button>
             </div>
             
