Tic tac toe base added and ZProf reward polish

--- a/ZProf_rewards.html
+++ b/ZProf_rewards.html
@@ -103,7 +103,7 @@
                     <h1>$50 Amazon card</h1>
                     <p>For Amazoningly amazing purchases!</p>
                     <div class = "points">10 points</div>
-                    <p><button onclick="Amazon50GC()" >Redeem</button></p>
+                    <p><button onclick="GC50()" >Redeem</button></p>
                 </div>
     
                 <div class="reward_card">
@@ -111,7 +111,7 @@
                     <h1>$50 Apple card</h1>
                     <p>An apple a day never hurt no soul</p>
                     <div class = "points">10 points</div>
-                    <p><button onclick="AppleGC()">Redeem</button></p>
+                    <p><button onclick="GC50()">Redeem</button></p>
                 </div>
                 
                 <div class="reward_card">
@@ -119,7 +119,7 @@
                     <h1>$50 Starbucks card</h1>
                     <p>Drinks? No problem</p>
                     <div class = "points">10 points</div>
-                    <p><button onclick="StarbucksGC()">Redeem</button></p>
+                    <p><button onclick="GC50()">Redeem</button></p>
                 </div>
 
                 <div class="reward_card">
@@ -127,7 +127,7 @@
                     <h1>$50 V.S. card</h1>
                     <p>Very secretive selections</p>
                     <div class = "points">10 points</div>
-                    <p><button onclick="VSGC()">Redeem</button></p>
+                    <p><button onclick="GC50()">Redeem</button></p>
                 </div>
 
                 <div class="reward_card">
@@ -135,7 +135,7 @@
                     <h1>$50 Macdonalds card</h1>
                     <p>The fastest of foods</p>
                     <div class = "points">10 points</div>
-                    <p><button onclick="McDonaldsGC()">Redeem</button></p>
+                    <p><button onclick="GC50()">Redeem</button></p>
                 </div>
 
                 <div class="reward_card">
@@ -143,7 +143,7 @@
                     <h1>$50 Tidy card</h1>
                     <p>Cleanest reviews in the west</p>
                     <div class = "points">10 points</div>
-                    <p><button onclick="TidyGC()">Redeem</button></p>
+                    <p><button onclick="GC50()">Redeem</button></p>
                 </div>
 
                 <div class="reward_card">
@@ -151,7 +151,7 @@
                     <h1>$50 Walmart card</h1>
                     <p>A wall of products, in a mart.</p>
                     <div class = "points">10 points</div>
-                    <p><button onclick="WalmartGC()">Redeem</button></p>
+                    <p><button onclick="GC50()">Redeem</button></p>
                 </div>
 
                 <div class="reward_card">
@@ -159,7 +159,7 @@
                     <h1>$50 Target card</h1>
                     <p>A target for good products</p>
                     <div class = "points">10 points</div>
-                    <p><button onclick="TargetGC()">Redeem</button></p>
+                    <p><button onclick="GC50()">Redeem</button></p>
                 </div>
 
                 <div class="reward_card">
@@ -167,7 +167,7 @@
                     <h1>$100 Steam card</h1>
                     <p>A gamer's delight</p>
                     <div class = "points">20 points</div>
-                    <p><button onclick="SteamGC()">Redeem</button></p>
+                    <p><button onclick="GC100()">Redeem</button></p>
                 </div>
 
                 <div class="reward_card">
@@ -175,7 +175,7 @@
                     <h1>$100 IKEA card</h1>
                     <p>The wood, the metal, and the plastic</p>
                     <div class = "points">20 points</div>
-                    <p><button onclick="IKEAGC()">Redeem</button></p>
+                    <p><button onclick="GC100()">Redeem</button></p>
                 </div>
 
                 <div class="reward_card">
@@ -183,7 +183,7 @@
                     <h1>$200 Hotel.com card</h1>
                     <p>A hotel with more hotels</p>
                     <div class = "points">35 points</div>
-                    <p><button onclick="HotelGC()">Redeem</button></p>
+                    <p><button onclick="GC200()">Redeem</button></p>
                 </div>
 
                 <div class="reward_card">
@@ -191,7 +191,7 @@
                     <h1>$200 Amazon card</h1>
                     <p>The biggest amazon.</p>
                     <div class = "points">35 points</div>
-                    <p><button onclick="Amazon200GC()">Redeem</button></p>
+                    <p><button onclick="GC200()">Redeem</button></p>
                 </div>
             </div>
         </div>
