--- a/index.html
+++ b/index.html
@@ -108,7 +108,11 @@
     
     <!-- Homepage Tabs -->
     <div class="homepage_tab">
-      <h3>Welcome gamer to our dropshipping website which is exclusive to the most trending games.</h3>
+      <div class="intro_container">
+        <h3>Welcome gamer to our dropshipping website which is exclusive to the most trending games.
+          <br>Simply log in to get full access of the site!
+        </h3>
+      </div>
         <div class="homepage_tab_wrapper">
           
             <!-- Browse Products -->
