--- a/profile.html
+++ b/profile.html
@@ -58,7 +58,7 @@
 
 
             <div class = "title_pos">
-              Welcome,
+              Welcome
               <div id="username">
                 </div>
             </div>
@@ -73,15 +73,13 @@
     <div class="rewards_page">
         <div class="top_rewards_page">
             <div class="exp_needed">
-                <p>Your xp: 
-                    <div id="xp">
-                    </div>
-                </p>
+                <p>Your xp:<div id="xp"></div></p>
             </div>
 
             <div class="exp_bar">
-                <div class="level" >Level 
-                    <div id="level">
+                <div class="level_container">
+                    <div class="level" >Level 
+                        <div id="level" ></div>
                     </div>
                 </div>
             </div>
