testing api points, level and xp system

--- a/ZProf_products.html
+++ b/ZProf_products.html
@@ -157,7 +157,7 @@
                 <p>Total cost: </p>
                 <p class = "total_cost"></p>
             </div>
-            <button class = "pay_now">Pay now</button>
+            <button class = "pay_now" onclick="calctotal()">Pay now</button>
         </div>
     </div>
 
