Zprof xp point DB link polish, index prof color

--- a/ZProf_index.html
+++ b/ZProf_index.html
@@ -92,27 +92,35 @@
 
     <!-- Homepage Tabs -->
     <div class="homepage_tab">
+      <div class="intro_container">
+        <h3>Welcome gamer to our dropshipping website which is exclusive to the most trending games.
+          <br>Simply log in to get full access of the site!
+        </h3>
+      </div>
         <div class="homepage_tab_wrapper">
-
+          
             <!-- Browse Products -->
             <div class="homepage_tab_card">
-                <div class="homepage_tab_button">
-                    <a href="./ZProf_products.html">Browse Products</a>
-                </div>
+              <img src="images/games image.webp" alt="Game products">
+              <div class="homepage_tab_button">
+                  <a href="./ZProf_products.html">Browse Products</a>
+              </div>
             </div>
 
             <!-- See Your Cart -->
             <div class="homepage_tab_card">
-                <div class="homepage_tab_button">
-                    <a href="./profile.html">Profile</a>
-                </div>
+              <img src="images/gamer profile.jpg" alt="Profile">
+              <div class="homepage_tab_button">
+                  <a href="./profile.html">Profile</a>
+              </div>
             </div>
 
             <!-- Browse Rewards -->
             <div class="homepage_tab_card">
-                <div class="homepage_tab_button">
-                    <a href="./ZProf_rewards.html">Browse Rewards</a>
-                </div>
+              <img src="images/rewards.webp" alt="Rewards">
+              <div class="homepage_tab_button">
+                  <a href="./ZProf_rewards.html">Browse Rewards</a>
+              </div>
             </div>
         </div>
     </div>
