--- a/ZProf_products.html
+++ b/ZProf_products.html
@@ -12,7 +12,7 @@
           href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
           integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc"
           crossorigin="anonymous"/>
-    <script src = "ZProf_products.js"></script> 
+
 </head>
 
 
@@ -157,7 +157,7 @@
                 <p>Total cost: </p>
                 <p class = "total_cost"></p>
             </div>
-            <button class = "pay_now" onclick="calctotal()">Pay now</button>
+            <button class = "pay_now" id ="calctotal">Pay now</button>
         </div>
     </div>
 
@@ -174,5 +174,7 @@
         <hr>
     </div>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src = "ZProf_products.js"></script> 
 </body>
 </html>
