--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <div class="homepage_tab_card">
               <img src="images/gamer profile.jpg" alt="Profile">
               <div class="homepage_tab_button">
-                  <a href="./profile.html">Profile</a>
+                  <a onclick="">Profile</a>
               </div>
             </div>
 
