Colour scheme polished and linked

--- a/ZProf_index.html
+++ b/ZProf_index.html
@@ -101,7 +101,9 @@
           
             <!-- Browse Products -->
             <div class="homepage_tab_card">
-              <img src="images/games image.webp" alt="Game products">
+              <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_LKXG6QRgtE.json" speed="1" style="width: 400px; height: 400px; border: 2px;"
+              loop autoplay>
+             </lottie-player>
               <div class="homepage_tab_button">
                   <a href="./ZProf_products.html">Browse Products</a>
               </div>
@@ -109,7 +111,9 @@
 
             <!-- See Your Cart -->
             <div class="homepage_tab_card">
-              <img src="images/gamer profile.jpg" alt="Profile">
+                <lottie-player src="https://assets6.lottiefiles.com/packages/lf20_FqsM4u.json" speed="1" style="width: 400px; height: 400px; border: 2px;"
+                loop autoplay>
+               </lottie-player>
               <div class="homepage_tab_button">
                   <a href="./profile.html">Profile</a>
               </div>
@@ -117,14 +121,16 @@
 
             <!-- Browse Rewards -->
             <div class="homepage_tab_card">
-              <img src="images/rewards.webp" alt="Rewards">
+              <lottie-player src="https://assets2.lottiefiles.com/private_files/lf30_fvfbum4f.json" speed="1" style="width: 400px; height: 400px; border: 2px;"
+              loop autoplay>
+             </lottie-player>
               <div class="homepage_tab_button">
                   <a href="./ZProf_rewards.html">Browse Rewards</a>
               </div>
             </div>
         </div>
     </div>
-
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="ZProf_index.js"></script>
 </body>
