--- a/profile.html
+++ b/profile.html
@@ -58,8 +58,7 @@
 
 
             <div class = "title_pos">Welcome
-              <div id="username">
-                </div>
+              <div id="username" class="username"></div>
             </div>
 
 
